# scdil

./: .check-reqs.txt  .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.py  spec.md
.github/workflows/: tests.yaml
src/scdil/: __init__.py  _ast.py  _dump.py  _frozendict.py  _load.py  _parse.py  _types.py  ast.py  frozendict.py  types.py  version.py
src/scdil/_dump/: __init__.py  human.py  machine.py
tests/: test_dumper.py  test_frozendict.py  test_human_dumper.py  test_loader.py  test_machine_dumper.py  test_parser.py  test_round_trip.py  test_scdil.py
